--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -105,19 +105,19 @@ function drawCurves() {
 
   <div class="row">
     <div class="small-12 medium-9 columns">
-      <div id="freq" class="text-center"><h1><i class="fa fa-lg fa-line-chart fa-spin"></i></h1></div>
+      <div id="freq" class="text-center"><h1><i class="fa fa-lg fa-spinner fa-spin"></i></h1></div>
     </div>
     <div class="small-12 medium-3 columns">
-      <div id="sentiment" class="text-center"><h1><i class="fa fa-lg fa-pie-chart fa-spin"></i></h1></div>
+      <div id="sentiment" class="text-center"><h1><i class="fa fa-lg fa-spinner fa-spin"></i></h1></div>
     </div>
   </div>
 
   <div class="row">
     <div class="small-12 medium-6 columns">
-      <div id="topmention" class="text-center"><h1><i class="fa fa-lg fa-bar-chart fa-spin"></i></h1></div>
+      <div id="topmention" class="text-center"><h1><i class="fa fa-lg fa-spinner fa-spin"></i></h1></div>
     </div>
     <div class="small-12 medium-6 columns">
-      <div id="topposting" class="text-center"><h1><i class="fa fa-lg fa-bar-chart fa-spin"></i></h1></div>
+      <div id="topposting" class="text-center"><h1><i class="fa fa-lg fa-spinner fa-spin"></i></h1></div>
     </div>
   </div>
 
