--- a/templates/login.html
+++ b/templates/login.html
@@ -21,44 +21,9 @@
 
   <!-- NAVBAR -->
   <nav class="top-bar" data-topbar role="navigation" ng-controller="navbarController">
-    <ul class="title-area">
-      <li class="name">
-        <h1 class="title"><i class="fa fa-twitter fa-lg"></i> {% block titlenav %}{% endblock %}</h1>
-      </li>
-       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-      <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
-    </ul>
-
-    <section class="top-bar-section">
-      <!-- Right Nav Section -->
-      <ul class="right">
-        <li class="{{'active' if nav == 'home'}}"><a href="/">Home</a></li>
-        <li class="has-dropdown {{'active' if nav == 'analyze'}}">
-          <a href="">Analyze</a>
-          <ul class="dropdown">
-            <li ng-repeat="info in summary">
-              <a ng-class="info.status" ng-href="/analyze/{{ '{{info.keyword | encodeURIComponent}}' }}" ng-bind-html="info.keyword+' ('+info.count+')'"></a>
-            </li>
-          </ul>
-        </li>
-        <li class="has-dropdown {{'active' if nav == 'learn'}}">
-          <a href="">Train</a>
-          <ul class="dropdown">
-            <li><a href="/learn">Random</a></li>
-            <li><a href="/learn/classified">Classified</a></li>
-            <li ng-repeat="info in summary">
-              <a ng-class="info.status" ng-href="/learn/{{ '{{info.keyword | encodeURIComponent}}' }}" ng-bind-html="info.keyword"></a>
-            </li>
-          </ul>
-        </li>
-        <li class="{{'active' if nav == 'logout'}}"><a href="/logout">Logout</a></li>
-      </ul>
-
-      <!-- Left Nav Section -->
-      <!-- <ul class="left">
-        <li><a href="#">Left Nav Button</a></li>
-      </ul> -->
-    </section>
+    <div class="name">
+        <h1 class="text-center" style="color:white">Login to Langgar Analytics</h1>
+    </div>
   </nav>
   <!-- END OF NAVBAR -->
 
@@ -66,7 +31,33 @@
 
 
   <!-- CONTENT -->
-  {% block content %}{% endblock %}
+  <div class="medium-4 medium-centered columns" style="margin-top:8em;margin-bottom:12em;">
+    <div class="login-box">
+      <div class="row">
+        <div class="medium-12 columns">
+          
+          <form action="" method="POST">
+             <div class="row">
+               <div class="medium-12 columns">
+                   <input type="text" name="username" placeholder="Username" value="{{username}}" autofocus />
+               </div>
+             </div>
+            <div class="row">
+               <div class="medium-12 columns">
+                   <input type="password" name="password" placeholder="Password" />
+               </div>
+            </div>
+            <div class="row">
+              <div class="medium-12 medium-centered columns">
+                <input type="submit" class="button expand" value="Login" />
+              </div>
+            </div>
+          </form>
+
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- END OF CONTENT -->
 
   <!-- FOOTER -->
