--- a/templates/learn.html
+++ b/templates/learn.html
@@ -25,7 +25,7 @@
         <div class="columns hide-for-small-only medium-1 th radius">
           <img ng-src="{{ tweet.user.profile_image_url }}">
         </div>
-        <div class="columns small-9 medium-8">
+        <div class="columns small-10 medium-8">
           <div class="user">
             <span class="name" ng-bind-html="tweet.user.name"></span>
             <a target="_blank" ng-href="http://twitter.com/{{ tweet.user.screen_name }}" class="username" ng-bind-html="'@'+tweet.user.screen_name"></a>
@@ -35,10 +35,11 @@
             <p ng-bind-html="tweet.text"></p>
           </div>
         </div>
-        <div class="columns small-3 medium-3">
-          <a class="tiny button secondary radius" ng-class="{'success': tweet.class == 'plus'}" ng-click="learn(tweet, 'plus')"><i class="fa fa-lg fa-thumbs-o-up"></i></a>
-          <a class="tiny button secondary radius" ng-class="{'success': tweet.class == 'minus'}" ng-click="learn(tweet, 'minus')"><i class="fa fa-lg fa-thumbs-o-down"></i></a>
-          <a class="tiny button secondary radius" ng-class="{'success': tweet.class == 'dummy'}" ng-click="learn(tweet, 'dummy')"><i class="fa fa-lg fa-meh-o"></i></a>
+        <div class="columns small-2 medium-3 button-group radius">
+          <a class="tiny button secondary" ng-class="{'success': tweet.class == 'positive'}" ng-click="learn(tweet, 'positive')"><i class="fa fa-lg fa-thumbs-o-up"></i></a>
+          <a class="tiny button secondary" ng-class="{'success': tweet.class == 'negative'}" ng-click="learn(tweet, 'negative')"><i class="fa fa-lg fa-thumbs-o-down"></i></a>
+          <a class="tiny button secondary" ng-class="{'success': tweet.class == 'neutral'}" ng-click="learn(tweet, 'neutral')"><i class="fa fa-lg fa-balance-scale"></i></a>
+          <a class="tiny button secondary" ng-class="{'success': tweet.class == 'dummy'}" ng-click="learn(tweet, 'dummy')"><i class="fa fa-lg fa-hand-lizard-o"></i></a>
         </div>
         <hr>
       </div>
