--- a/templates/classified.html
+++ b/templates/classified.html
@@ -18,7 +18,7 @@
 
       <div class="row">
         <div class="columns small-12">
-          <input type="search" placeholder="Type class name to filter (potitive, negative, neutral, or dummy)" autocomplete="off" ng-model="keyword">
+          <input type="search" placeholder="Type class name to filter (positive, negative, neutral, or dummy)" autocomplete="off" ng-model="keyword">
         </div>
       </div>
 
