--- a/templates/streamings.html
+++ b/templates/streamings.html
@@ -30,7 +30,7 @@
           <a ng-href="/analyze/{{ info.keyword }}">
             <li class="title keyword" ng-bind-html="info.keyword"></li>
           </a>
-          <li class="price"><i ng-show="info.processing" class="fa fa-spinner fa-spin fa-spin"></i><span ng-hide="info.processing" ng-bind-html="info.count + ' results'"></span></li>
+          <li class="price"><i ng-show="info.processing" class="fa fa-spinner fa-spin fa-spin"></i><span ng-hide="info.processing" ng-bind-html="(info.count | number:0) + ' results'"></span></li>
           <!-- <li class="description"></li> -->
           <li class="bullet-item" ng-repeat="tweet in info.tweets" ng-bind-html="tweet"></li>
           <li class="cta-button">
