--- a/static/css/app.css
+++ b/static/css/app.css
@@ -7,9 +7,14 @@ body {
   padding-left: 5%;
 }
 
-.keyword:hover {
-  color: lightblue;
+.keyword {
   font-weight: bolder;
+}
+
+.keyword:hover {
+  background: #008CBA;
+  /*color: lightblue;*/
+  /*font-weight: bolder;*/
 }
 
 .user {
