--- a/templates/analyze-hc.html
+++ b/templates/analyze-hc.html
@@ -40,14 +40,14 @@
       </div>
       <!-- TOP TWEET -->
       <div class="row" ng-repeat="tweet in retweets">
-        <div class="columns hide-for-small-only medium-2 th radius">
-          <img ng-src="{{ tweet.user.profile_image_url }}">
+        <div class="columns hide-for-small-only medium-2">
+          <a class="th radius" target="_blank" ng-href="http://twitter.com/{{ tweet.user.screen_name }}"><img ng-src="{{ tweet.user.profile_image_url }}"></a>
         </div>
         <div class="columns small-12 medium-10">
           <div class="user">
             <span class="name" ng-bind-html="tweet.user.name"></span>
             <a target="_blank" ng-href="http://twitter.com/{{ tweet.user.screen_name }}" class="username" ng-bind-html="'@'+tweet.user.screen_name"></a>
-            <a target="_blank" ng-href="http://twitter.com/{{ tweet.user.screen_name }}/status/{{ tweet.id_str }}" class="count label secondary radius" ng-bind-html="tweet.retweet_count+' retweets'"></a>
+            <a target="_blank" ng-href="http://twitter.com/{{ tweet.user.screen_name }}/status/{{ tweet.id_str }}" class="count label secondary radius" ng-bind-html="tweet.retweet_count+' retweets <i class=\'fa fa-external-link\'></i>'"></a>
           </div>
           <div class="text">
             <p ng-bind-html="tweet.text"></p>
@@ -64,14 +64,14 @@
       </div>
       <!-- JUST SOME RANDOM TWEETS -->
       <div class="row" ng-repeat="tweet in randomtweets">
-        <div class="columns hide-for-small-only medium-2 th radius">
-          <img ng-src="{{ tweet.user.profile_image_url }}">
+        <div class="columns hide-for-small-only medium-2">
+          <a class="th radius" target="_blank" ng-href="http://twitter.com/{{ tweet.user.screen_name }}"><img ng-src="{{ tweet.user.profile_image_url }}"></a>
         </div>
         <div class="columns small-12 medium-10">
           <div class="user">
             <span class="name" ng-bind-html="tweet.user.name"></span>
             <a target="_blank" ng-href="http://twitter.com/{{ tweet.user.screen_name }}" class="username" ng-bind-html="'@'+tweet.user.screen_name"></a>
-            <a target="_blank" ng-href="http://twitter.com/{{ tweet.user.screen_name }}/status/{{ tweet.id_str }}" class="count label secondary radius" ng-bind-html="tweet.retweet_count+' retweets'"></a>
+            <a target="_blank" ng-href="http://twitter.com/{{ tweet.user.screen_name }}/status/{{ tweet.id_str }}" class="count label secondary radius" ng-bind-html="tweet.retweet_count+' retweets <i class=\'fa fa-external-link\'></i>'"></a>
           </div>
           <div class="text">
             <p ng-bind-html="tweet.text"></p>
@@ -105,13 +105,13 @@
     <!-- TWEETS -->
     <div class="row" ng-repeat="tweet in tweets">
       <div class="columns hide-for-small-only medium-1">
-        <div class="th radius"> <img ng-src="{{ tweet.user.profile_image_url }}"> </div>
+        <a class="th radius" target="_blank" ng-href="http://twitter.com/{{ tweet.user.screen_name }}"> <img ng-src="{{ tweet.user.profile_image_url }}"> </a>
       </div>
       <div class="columns small-12 medium-11">
         <div class="user row">
           <span class="name" ng-bind-html="tweet.user.name"></span>
           <a target="_blank" ng-href="http://twitter.com/{{ tweet.user.screen_name }}" class="username" ng-bind-html="'@'+tweet.user.screen_name"></a>
-          <a target="_blank" ng-href="http://twitter.com/{{ tweet.user.screen_name }}/status/{{ tweet.id_str }}" class="count label secondary radius" ng-bind-html="tweet.retweet_count+' retweets'"></a>
+          <a target="_blank" ng-href="http://twitter.com/{{ tweet.user.screen_name }}/status/{{ tweet.id_str }}" class="count label secondary radius" ng-bind-html="tweet.retweet_count+' retweets <i class=\'fa fa-external-link\'></i>'"></a>
         </div>
         <div class="text row">
           <p ng-bind-html="tweet.text"></p>
