fix some minor issues

--- a/templates/streamings.html
+++ b/templates/streamings.html
@@ -22,7 +22,7 @@
   </div>
 
   <div class="row">
-    <div class="small-block-grid-1 medium-block-grid-3">
+    <div class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
 
       <li ng-class="info.status" ng-repeat="info in summary | filter:keyword">
         <ul class="pricing-table">
