fixing crash in twitter streamer

--- a/templates/analyze-hc.html
+++ b/templates/analyze-hc.html
@@ -106,7 +106,7 @@
         <div class="alert-box info radius">
           <span>Tweets</span>
           <i ng-hide="hastweets" class="fa fa-lg fa-cog fa-spin"></i>
-          <a class="label secondary radius right" ng-href="{{ downloadlink }}" download>
+          <a title="download" class="label secondary radius right" ng-href="{{ downloadlink }}" download>
             <i ng-show="hastweets" class="fa fa-lg fa-cloud-download"></i>
           </a>
         </div>
