adding top hashtag and top URL

--- a/templates/base.html
+++ b/templates/base.html
@@ -91,7 +91,7 @@
 
   <script>
     $(document).foundation();
-    $(document).foundation('reflow');
+    setTimeout(function(){$(document).foundation('reflow');}, 7500);
   </script>
 </body>
 </html>
