--- a/templates/analyze-hc.html
+++ b/templates/analyze-hc.html
@@ -11,10 +11,8 @@
 <div id="analyzeController" ng-controller="analyzeController">
 
   <div class="row">
-    <div class="small-12 medium-9 columns">
+    <div class="small-12 medium-12 columns">
       <div id="freq" class="text-center"></div>
-    </div>
-    <div class="small-12 medium-3 columns">
       <div id="sentiment" class="text-center"></div>
     </div>
   </div>
@@ -25,6 +23,15 @@
     </div>
     <div class="small-12 medium-6 columns">
       <div id="topposting" class="text-center"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="small-12 medium-6 columns">
+      <div id="tophashtag" class="text-center"></div>
+    </div>
+    <div class="small-12 medium-6 columns">
+      <div id="topurl" class="text-center"></div>
     </div>
   </div>
 
