--- a/templates/streamings.html
+++ b/templates/streamings.html
@@ -24,7 +24,7 @@
     <div class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
 
       <li ng-class="info.status" ng-repeat="info in summary | filter:keyword">
-        <ul ng-class="'pricing-table animated' + (info.playing || info.pausing ? ' zoomOutUp' : info.removing ? ' hinge' : info.failed ? ' zoomInDown' : ' zoomInDown')">
+        <ul ng-class="'pricing-table animated' + (info.playing || info.pausing ? ' zoomOutUp' : info.removing ? ' hinge' : info.failed ? ' flipInY' : ' flipInY')">
           {% raw %}
           <a ng-href="/analyze/{{ info.keyword }}">
             <li class="title keyword" ng-bind-html="info.keyword"></li>
