--- a/templates/analyze-hc.html
+++ b/templates/analyze-hc.html
@@ -48,7 +48,7 @@
       <!-- TOP TWEET -->
       <div class="row" ng-repeat="tweet in retweets">
         <div class="columns hide-for-small-only medium-2">
-          <a class="th radius" target="_blank" ng-href="http://twitter.com/{{ tweet.retweeted_status.user.screen_name }}"><img ng-src="{{ tweet.retweeted_status.user.profile_image_url }}"></a>
+          <a class="th radius" target="_blank" ng-href="http://twitter.com/{{ tweet.retweeted_status.user.screen_name || tweet.user.screen_name }}"><img ng-src="{{ tweet.retweeted_status.user.profile_image_url || tweet.user.profile_image_url }}"></a>
         </div>
         <div class="columns small-12 medium-10">
           <div class="label info tiny" ng-show="tweet.retweeted_status.id_str">
@@ -57,12 +57,12 @@
             <span ng-bind-html="'retweeted:'"></span>
           </div>
           <div class="user">
-            <span class="name" ng-bind-html="tweet.retweeted_status.user.name"></span>
-            <a target="_blank" ng-href="http://twitter.com/{{ tweet.retweeted_status.user.screen_name }}" class="username" ng-bind-html="'@'+tweet.retweeted_status.user.screen_name"></a>
-            <a target="_blank" ng-href="http://twitter.com/{{ tweet.retweeted_status.user.screen_name }}/status/{{ tweet.retweeted_status.id_str }}" class="count label secondary radius" ng-bind-html="tweet.retweeted_status.retweet_count+' retweets <i class=\'fa fa-external-link\'></i>'"></a>
+            <span class="name" ng-bind-html="tweet.retweeted_status.user.name || tweet.user.name"></span>
+            <a target="_blank" ng-href="http://twitter.com/{{ tweet.retweeted_status.user.screen_name || tweet.user.screen_name }}" class="username" ng-bind-html="'@'+(tweet.retweeted_status.user.screen_name || tweet.user.screen_name)"></a>
+            <a target="_blank" ng-href="http://twitter.com/{{ tweet.retweeted_status.user.screen_name || tweet.user.screen_name }}/status/{{ tweet.retweeted_status.id_str || tweet.id_str }}" class="count label secondary radius" ng-bind-html="(tweet.retweeted_status.retweet_count || tweet.retweet_count)+' retweets <i class=\'fa fa-external-link\'></i>'"></a>
           </div>
           <div class="text">
-            <p ng-bind-html="tweet.retweeted_status.text"></p>
+            <p ng-bind-html="tweet.retweeted_status.text || tweet.text"></p>
           </div>
         </div>
       </div>
