--- a/templates/streamings.html
+++ b/templates/streamings.html
@@ -32,13 +32,13 @@
           <li class="price"><i ng-show="info.processing" class="fa fa-spinner fa-spin"></i><span ng-hide="info.processing" ng-bind-html="(info.count | number:0) + ' results'"></span></li>
           <li class="bullet-item" ng-repeat="tweet in info.tweets" ng-bind-html="tweet"></li>
           <li class="cta-button">
-            <button ng-disabled="info.is_streaming || info.processing" ng-click="stream(info, 'active')" ng-hide="info.status=='active'" class="button radius tiny">
+            <button ng-disabled="info.is_streaming" ng-click="stream(info, 'active')" ng-hide="info.status=='active'" class="button radius tiny">
               <i ng-class="{'fa fa-play':!info.playing, 'fa fa-spinner fa-spin fa-spinner':info.playing}"></i>
             </button>
-            <button ng-disabled="info.is_streaming || info.processing" ng-click="stream(info, 'inactive')" ng-hide="info.status=='inactive'"class="button radius warning tiny">
+            <button ng-disabled="info.is_streaming" ng-click="stream(info, 'inactive')" ng-hide="info.status=='inactive'"class="button radius warning tiny">
               <i ng-class="{'fa fa-pause':!info.pausing, 'fa fa-spinner fa-spin fa-spinner':info.pausing}"></i>
             </button>
-            <button ng-disabled="info.is_streaming || info.processing" ng-click="stream(info, 'removed')" class="button radius alert tiny">
+            <button ng-disabled="info.is_streaming" ng-click="stream(info, 'removed')" class="button radius alert tiny">
               <i ng-class="{'fa fa-eye-slash fa-lg':!info.removing, 'fa fa-spinner fa-spin fa-spinner':info.removing}"></i>
             </button>
           </li>
