--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
 
 
   <!-- CONTENT -->
-  <div class="medium-4 medium-centered columns animated zoomInDown" style="margin-top:8em;margin-bottom:12em;">
+  <div class="medium-4 medium-centered columns animated flipInY" style="margin-top:8em;margin-bottom:12em;">
     <div class="login-box">
       <div class="row">
         <div class="medium-12 columns">
