--- a/templates/analyze-hc.html
+++ b/templates/analyze-hc.html
@@ -101,7 +101,7 @@
 
   <div class="row">
     <div class="small-12 text-center">
-      <a ng-href="/download/all/{{keyword}}/all-tweets-{{keyword}}.csv" class="button small" target="_blank" ng-bind-html="'Download All Tweets ('+ (total | number:0) +')'"></a>
+      <a ng-href="/download/all/{{keyword}}/all-tweets-{{keyword}}.csv" class="button small" target="_blank" ng-bind-html="'Download All Tweets ('+ (total | number:0) +')'">{% endraw %}{{size}}{% raw %}</a>
     </div>
   </div>
 
