--- a/templates/login.html
+++ b/templates/login.html
@@ -42,7 +42,7 @@
             </div>
             <div class="row">
                <div class="medium-12 columns">
-                   <input id="remember" type="checkbox" name="remember"><label for="remember">Remember Me</label>
+                   <input id="remember" type="checkbox" name="remember" checked="checked"><label for="remember">Remember Me</label>
                </div>
             </div>
             <div class="row">
