--- a/templates/analyzenews-hc.html
+++ b/templates/analyzenews-hc.html
@@ -101,7 +101,7 @@
 
   <div class="row">
     <div class="small-12 text-center">
-      <a ng-href="/download/all/{{keyword}}/all-news-{{keyword}}.csv" class="button small" target="_blank" ng-bind-html="'Download All News ('+ (total | number:0) +')'">{% endraw %}{{size}}{% raw %}</a>
+      <a ng-href="/download/allnews/{{keyword}}/all-news-{{keyword}}.csv" class="button small" target="_blank" ng-bind-html="'Download All News ('+ (total | number:0) +')'">{% endraw %}{{size}}{% raw %}</a>
     </div>
   </div>
 
