--- a/templates/streamings.html
+++ b/templates/streamings.html
@@ -20,7 +20,7 @@
     </div>
   </div>
 
-  <div ng-hide="summary.length"><h1 style="text-align:center" title="retreiving data..."><i class="fa fa-spinner fa-spin"></i></h1></div>
+  <div ng-hide="summary.length"><h1 style="text-align:center" title="retrieving data..."><i class="fa fa-spinner fa-spin"></i></h1></div>
   <div class="row">
     <div class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
 
